# backend-template

./: .gitignore  README.md  main.py  pyproject.toml  require.txt
app/: main.py  test.py
app/core/: config.py  cors.py  fileConfig.py
app/dao/: TestData.py
app/db/: milvus.py  session.py
app/modules/base/: test.py
app/modules/base/user/: user.py
app/utils/: baseresponse.py  businessexception.py  cors.py  logger.py
