# pyproject.toml

[project]
name = "backend-template"
version = "0.1.0"

dependencies = [
    "fastapi==0.103.1",
    "uvicorn[standard]==0.23.2",
    "pydantic-settings==2.0.3",
    "python-dotenv==1.0.0",
    "sqlalchemy==2.0.21",
    "redis==4.6.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"